--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.curityVersion>6.6.0</project.curityVersion>
+        <project.curityVersion>6.8.0</project.curityVersion>
         <project.hibernateValidatorVersion>6.2.0.CR1</project.hibernateValidatorVersion>
         <project.slf4jVersion>1.7.30</project.slf4jVersion>
     </properties>
@@ -230,5 +230,35 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>customer-release-repo</id>
+            <url>https://nexus.curityio.net/repository/customer-release-repo/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>customer-snapshot-repo</id>
+            <url>https://nexus.curityio.net/repository/customer-snapshot-repo</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>customer-release-repo</id>
+            <name>Curity Nexus Release Repository</name>
+            <url>https://nexus.curityio.net/repository/customer-release-repo/</url>
+        </repository>
+        <snapshotRepository>
+            <id>customer-snapshot-repo</id>
+            <name>Curity Nexus Snapshot Repository</name>
+            <url>https://nexus.curityio.net/repository/customer-snapshot-repo/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
 
