added support for USER_BLOCKED error code

--- a/src/main/resources/messages/en/authenticator/netidaccess-os/service.properties
+++ b/src/main/resources/messages/en/authenticator/netidaccess-os/service.properties
@@ -29,6 +29,7 @@ service.rfa17=The Net iD Access App couldn't be found on your computer or mobile
 service.cur1=An error has occurred (1). Try again.
 service.cur2=An error has occurred (2). Try again.
 service.cur3=Invalid User ID
+service.cur4=Authentication has been temporarily blocked for this account
 service.unknown=An error has occurred (3).
 service.authTimeout=Authentication did not take place within the allowable time limit
 service.error.user-cancelled=User cancelled
