--- a/src/main/resources/messages/en/authenticator/netidaccess-os/service.properties
+++ b/src/main/resources/messages/en/authenticator/netidaccess-os/service.properties
@@ -14,23 +14,25 @@
 #  limitations under the License.
 #
 
-service.start_app=Start your Net iD Access app
-service.cancelled=Action cancelled. Please try again
-service.internal_error=Internal error. Please try again
-service.user_cancelled=Action cancelled
-service.expired_transaction=The Net iD Access App is not responding. Please check that the program is started and that you have internet access, then try again
-service.user_sign=Enter your security code in the Net iD Access App and select Identify or Sign
-service.client_error=Internal error. Update your Net iD Access App and try again
-service.outstanding_transaction=Trying to start your Net iD Access app
-service.no_app=You do not have a Net iD Access which can be used for this login/signature on this computer. If you have a Net iD Access card, please insert it into your card reader
-service.no_app_try_other_device=You do not have a Net iD Access which can be used for this login/signature on this computer. If you have a Net iD Access card, please insert it into your card reader
-service.certificate_error=The Net iD Access ID you are trying to use is revoked or too old. Please use another Net iD Access or order a new one from your bank
-service.start_failed=The Net iD Access App couldn't be found on your computer or mobile device. Please install it and order a Net iD Access ID
-service.access_denied_rp=An error has occurred (1). Try again.
-service.invalid_parameters=An error has occurred (2). Try again.
-service.unknown_personal_number=Invalid User ID
+service.rfa1=Start your Net iD Access app
+service.rfa3=Action cancelled. Please try again
+service.rfa5=Internal error. Please try again
+service.rfa6=Action cancelled
+service.rfa8=The Net iD Access App is not responding. Please check that the program is started and that you have internet access, then try again
+service.rfa9=Enter your security code in the Net iD Access App and select Identify or Sign
+service.rfa12=Internal error. Update your Net iD Access App and try again
+service.rfa13=Trying to start your Net iD Access app
+service.rfa14=You do not have a Net iD Access which can be used for this login/signature on this computer. If you have a Net iD Access card, please insert it into your card reader
+service.rfa15=You do not have a Net iD Access which can be used for this login/signature on this computer. If you have a Net iD Access card, please insert it into your card reader
+service.rfa16=The Net iD Access ID you are trying to use is revoked or too old. Please use another Net iD Access or order a new one from your bank
+service.rfa17=The Net iD Access App couldn't be found on your computer or mobile device. Please install it and order a Net iD Access ID
+service.cur1=An error has occurred (1). Try again.
+service.cur2=An error has occurred (2). Try again.
+service.cur3=Invalid User ID
 service.user_blocked=Authentication has been temporarily blocked for this account due to multiple requests
-service.unknown_error=An error has occurred (3).
+service.unknown=An error has occurred (3).
 service.authTimeout=Authentication did not take place within the allowable time limit
 service.error.user-cancelled=User cancelled
 service.error.too-many-attempts=Too many attempts. You may try again later.
+
+
