Fixed the message key for sv lang

--- a/src/main/resources/messages/sv/authenticator/netidaccess-os/service.properties
+++ b/src/main/resources/messages/sv/authenticator/netidaccess-os/service.properties
@@ -29,7 +29,7 @@ service.rfa17=Net iD Access-programmet verkar inte finnas i din dator eller tele
 service.cur1=Ett fel har inträffat (1). Försök igen.
 service.cur2=Ett fel har inträffat (2). Försök igen.
 service.cur3=Felaktigt användarid.
-service.cur4=Kontot har blivit tillfälligt låst på grund av upprepade försök
+service.user_blocked=Kontot har blivit tillfälligt låst på grund av upprepade försök
 service.unknown=Ett fel har inträffat (3).
 service.authTimeout=Identifiering skedde inte inom tillåten tidsgräns.
 service.error.user-cancelled=Användaren avbröt
